k8s/gitops/netpol/allow-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-netpol
  namespace: backend-ns
spec:
  podSelector:
    matchLabels:
      app: workload-backend-dev
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: database-ns
    ports:
    - protocol: TCP
      port: 5432
