k8s/gitops/netpol/allow-from-fe.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-frontend
  namespace: backend-ns
spec:
  podSelector:
    matchLabels:
      app: workload-backend-dev
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: frontend-ns
      podSelector:
        matchLabels:
          app: workload-frontend-dev
    ports:
    - protocol: TCP
      port: 8000
