k8s/gitops/netpol/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: backend-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
